--- a/.github/workflows/build-feature.yml
+++ b/.github/workflows/build-feature.yml
@@ -5,7 +5,7 @@ on:
       - feature/*
 jobs:
   build-feature:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     steps:
       - uses: actions/checkout@v4
       - name: pull and checking out from git repository
@@ -25,7 +25,7 @@ jobs:
       - name: run test and build angular app
         run: |
           ng test --watch=false
-          ng build --prod
+          ng build
           echo "run test and build angular app"
 
       #- name: copy build to costumer-back/src/main/resources/static folder
